<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JasCalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hellojascal">Welcome to Jas Calculator</string>
    <string name="edit_operand">Enter the left operand</string>
    <string name="edit_operand2">Enter the right operand</string>
    <string name="button_subtract">-</string>
    <string name="button_add">+</string>
    <string name="button_divide">/</string>
    <string name="button_multiply">*</string>
    <string name="button_answer">Answer</string>
    <string name="button_clear">Clear</string>
    <string name="result">Result will be displayed here</string>
    <string name="menu_item_ans">Ans</string>
    <string name="button_back">Go Back</string><string name="menu_item_clear">Clear</string>
    

</resources>
