<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.androidbasic.jascalculator.CalculatorMainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hellojascal"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/edit_operand2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_operand"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:hint="@string/edit_operand2"
        android:textSize="21sp" />

    <EditText
        android:id="@+id/edit_operand"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_alignRight="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/edit_operand"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/edit_operand2"
        android:layout_centerVertical="true"
        android:onClick="calAdd"
        android:text="@string/button_add" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignRight="@+id/edit_operand2"
        android:layout_below="@+id/button3"
        android:layout_marginTop="38dp"
        android:hint="@string/result"
        android:textSize="21sp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/button1"
        android:layout_toRightOf="@+id/button2"
        android:onClick="calSub"
        android:text="@string/button_subtract" />

    <Button
        android:id="@+id/button3"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignRight="@+id/button6"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="calAnswer"
        android:text="@string/button_answer" />

    <Button
        android:id="@+id/button5"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/button2"
        android:layout_toRightOf="@+id/button6"
        android:onClick="calMul"
        android:text="@string/button_multiply" />

    <Button
        android:id="@+id/button1"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/button5"
        android:layout_below="@+id/button5"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="calClear"
        android:text="@string/button_clear" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:layout_above="@+id/button1"
        android:layout_toRightOf="@+id/button5"
        android:onClick="calDiv"
        android:text="@string/button_divide" />

</RelativeLayout>